SonarQube fixes